# chaos-assignments

./: CMakeLists.txt  README.md
assignment_2/: CMakeLists.txt  ppmrectangles.cpp  ppmshapes.cpp
assignment_3/: CMakeLists.txt  cameraRays.cpp
assignment_4/: CMakeLists.txt  triangles.cpp
assignment_5/: CMakeLists.txt  trianglesIntersection.cpp
assignment_6/: CMakeLists.txt  cameraMovement.cpp
assignment_7/: CMakeLists.txt  loadScene.cpp
assignment_8/: CMakeLists.txt  sceneWithLights.cpp
assignment_9/: CMakeLists.txt  barycentricShading.cpp
betterSearch/: better-search.cpp
common/: CMakeLists.txt
common/2dShapes/: shapes.cpp  shapes.h
common/core/: camera.cpp  camera.h  color.cpp  color.h  light.cpp  light.h  mat3.h  material.cpp  material.h  mesh.cpp  mesh.h  ray.cpp  ray.h  scene.cpp  scene.h  triangle.cpp  triangle.h  vec3.cpp  vec3.h
common/linalg/: mat3.cpp
common/util/: renderPPM.h  shadePixels.h  transform.h
