cmake_minimum_required(VERSION 3.5)

project(chaos-assignments LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(common)
add_subdirectory(assignment_2)
add_subdirectory(assignment_3)
add_subdirectory(assignment_4)
add_subdirectory(assignment_5)
